# Bereans-Study-MCP

./: .env.example  .gitignore  README.md  pyproject.toml
docs/plans/: 2026-03-05-bereans-implementation-plan.md  2026-03-05-bereans-mcp-server-design.md
src/bereans/: __init__.py  config.py  server.py
src/bereans/embeddings/: ollama.py
src/bereans/ingestion/: chunker.py  pipeline.py
src/bereans/ingestion/parsers/: __init__.py  csv_json.py  docx.py  epub.py  html.py  markdown.py  pdf.py  plaintext.py
src/bereans/search/: engine.py
src/bereans/storage/: sqlite_store.py  vector_store.py
tests/: test_chunker.py  test_embeddings.py  test_ingestion.py  test_parsers.py  test_search.py  test_storage.py  test_vector_store.py
